--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,15 @@
 group 'com.twwm.share_files_and_screenshot_widgets'
 version '1.0'
-
 buildscript {
     repositories {
         google()
         mavenLocal()
         mavenCentral()
     }
-
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
     }
 }
-
 rootProject.allprojects {
     repositories {
         google()
@@ -20,15 +17,13 @@ rootProject.allprojects {
         mavenCentral()
     }
 }
-
 apply plugin: 'com.android.library'
-
 android {
     compileSdkVersion 34
-
     defaultConfig {
         minSdkVersion 16
     }
+    namespace "com.twwm.share_files_and_screenshot_widgets"
     lintOptions {
         disable 'InvalidPackage'
     }
